<resources>
    <string name="app_name">Android Code Test Jonathan Filho</string>

    <string name="none_contact_added"> You have 0 contact added!</string>
    <string name="add_contact"> Add Contact</string>
    <string name="contact">Contact</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="add_fields">Add Fields</string>
    <string name="save">Save</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="address">Address</string>

    <string name="add_phone">Add Phone</string>
    <string name="add_email">Add Email</string>
    <string name="add_address">Add Address</string>
    <string name="add_date_of_birth">Add Date of Birth</string>
    <string name="missing">Missing value %1$s</string>
    <string name="search_contact">Search</string>
    <string name="delete">Delete</string>

</resources>
